k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: goalixa-auth
spec:
  selector:
    app: auth
  ports:
    - name: http
      port: 80
      targetPort: http
